--- a/src/app/pages/services/web-development/web-development.component.html
+++ b/src/app/pages/services/web-development/web-development.component.html
@@ -1,10 +1,10 @@
 <section class="w-full flex flex-col">
-    <div class="w-full flex flex-row justify-between mt-[150px]">
-        <div class="w-full md:w-[38%] flex flex-col justify-center items-start gap-5">
-            <h2 class="text-[60px] text-black font-bold">
+    <div class="w-full flex flex-col md:flex-row justify-between mt-[150px] bg-[url('./assets/frontent_files/img/services/web-developement.png')] bg-left bg-no-repeat bg-cover md:bg-none">
+        <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
+            <h2 class="text-[45px] md:text-[60px] text-black font-bold">
                 Build Best websites for your Business
             </h2>
-            <p>
+            <p class=" text-[#424040] md:text-[#6b6b84]">
                 Client-focused, customer-centric, creating website solutions that deliver tangible business results,
                 Clumps solutions 's web developers helps brands the ever-changing digital landscape.
             </p>
@@ -12,56 +12,55 @@
                 class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] bg-black text-[#fff] mt-5">Schedule
                 A Meeting</button>
         </div>
-        <div class="w-full md:w-[58%] flex justify-end">
+        <div class="w-full hidden md:flex md:w-[58%]  justify-end">
             <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement.png" />
         </div>
     </div>
-
 </section>
 
 <section class="w-full flex flex-col mt-[100px]">
     <div class="w-full">
-        <h2 class="text-center text-[50px] font-bold ">
+        <h2 class="text-center text-[30px] md:text-[50px] font-bold ">
             Our Process For Your Website development
         </h2>
     </div>
-    <div class="w-full flex flex-row  flex-wrap justify-center mt-[150px] gap-5 gap-y-10 mb-[100px]">
-        <div class="w-[28%] flex flex-col gap-5">
-            <h2 class="text-[20px] font-bold">Discovery</h2>
+    <div class="w-full flex flex-col lg:flex-row  flex-wrap justify-center mt-[150px] gap-5 gap-y-10 mb-[100px]">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
+            <h2 class="text-[20px] font-bold ">Discovery</h2>
             <div>
                 <p>Our website development services cater to a global clientele. Before we get started, we'll dive into
                     a scope and scope discussion to understand your needs and vision. </p>
             </div>
         </div>
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
             <h2 class="text-[20px] font-bold">Planning & Strategy</h2>
             <div>
                 <p>Understanding your requirements, we conduct market research and create a detailed action plan. This
                     is where we finalize the layout, elements and content.</p>
             </div>
         </div>
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
             <h2 class="text-[20px] font-bold">Designing</h2>
             <div>
                 <p>We are fully dedicated to developing a flawless website for you. Part by part, we curate the website
                     of your dreams according to the approved structure.</p>
             </div>
         </div>
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
             <h2 class="text-[20px] font-bold">Continued Support</h2>
             <div>
                 <p>The website development process doesn't end once it's launched; maintenance is required. We provide
                     ongoing support for design improvements, bug fixes, and more.</p>
             </div>
         </div>
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
             <h2 class="text-[20px] font-bold">Testing</h2>
             <div>
                 <p>To ensure that the website design is error-free and glitch-free, we perform several testing phases to
                     assess functionality, usability, performance, and other parameters.</p>
             </div>
         </div>
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="w-full lg:w-[28%] flex flex-col gap-5">
             <h2 class="text-[20px] font-bold">Lunch</h2>
             <div>
                 <p>To kick-start your digital presence, we help launch your website. After full setup, we successfully
@@ -72,13 +71,13 @@
 </section>
 
 <section class="w-full flex flex-col">
-    <div class="w-full">
-        <h2 class="text-center text-[50px] font-bold ">
+    <div class="w-full mb-5">
+        <h2 class="text-center text-[30px] md:text-[50px] font-bold ">
             Amazing Web Design and Development Features
         </h2>
     </div>
     <div class="w-full flex flex-row  flex-wrap justify-center items-center  gap-5 gap-y-10">
-        <div class="w-[28%] flex flex-col gap-5">
+        <div class="md:w-[28%] flex flex-col gap-5">
             <h2 class="w-full flex flex-row text-center text-[20px] font-bold gap-4">
                 <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green"
@@ -154,13 +153,13 @@
 
 <section class="w-full flex flex-col mt-[10px] bg-[#33B5CC] p-[10px]">
     <div class="w-full mt-4">
-        <h2 class="text-center text-[50px] font-bold ">
+        <h2 class="text-center text-[30px] md:text-[50px] font-bold ">
             Technology Expertise And Partnerships that Drive us to Work Smarter
         </h2>
     </div>
     <div class="w-full flex flex-row flex-wrap justify-center items-center mt-[150px] gap-5 gap-y-5 mb-[100px]">
         <div *ngFor="let item of Technology"
-            class="w-[22%] px-[30px] py-[10px] flex flex-row gap-9 justify-center items-center border-[3px] rounded hover:shadow-lg bg-[#fff]">
+            class="w-full md:w-[30%] lg:w-[22%] px-[30px] py-[10px] flex flex-row gap-9 justify-center items-center border-[3px] rounded hover:shadow-lg bg-[#fff]">
             <img class="w-[70px] h-[70px]"
                 src="{{hostUrl}}assets/frontent_files/img/services/technology-icons/{{item.URL}}.png" />
             <p class="font-bold text-black">
@@ -168,8 +167,8 @@
             </p>
         </div>
     </div>
-    <div class="w-full m-4 p-[10px]">
-        <h2 class="text-center text-[30px] font-bold ">
+    <div class="w-full my-4 p-[10px]">
+        <h2 class="text-center text-[20px] md:text-[25px] lg:text-[30px] font-bold ">
             With a dedicated Digital Strategist assigned to your account who’s working closely with our technology
             partners. You are rest assured of your return on investment on your marketing dollars being spent on your
             business goals.
@@ -179,13 +178,13 @@
 
 <section class="w-full flex flex-col  justify-center items-center mt-[100px]">
     <div class="w-[80%]">
-        <h2 class="text-center text-[30px] font-bold ">
+        <h2 class="text-center text-[20px] md:text-[25px] lg:text-[30px] font-bold ">
             Web designers help transform your brand into a visual story. We turn your website into an effective way to
             engage with your audience and a high-performing marketing tool for your business.
         </h2>
     </div>
-    <div class="flex flex-col flex-wrap justify-center items-center">
-        <div class="w-[70%] flex flex-row justify-center items-center">
+    <div class="flex flex-col flex-wrap justify-center items-center my-5">
+        <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
             <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="" srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">More than just a pretty face</h2>
@@ -194,8 +193,7 @@
                     make your site as beautiful as it is functional and easy to use.</p>
             </div>
         </div>
-        <div class="w-[70%] flex flex-row justify-center items-center">
-
+        <div class="w-full md:w-[70%] flex flex-col md:flex-row justify-center items-center">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Integrated user experience and interface</h2>
                 <p>Strong website development provides opportunities for users to gain useful information, understand
@@ -204,7 +202,7 @@
             </div>
             <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-2.png" alt="" srcset="">
         </div>
-        <div class="w-[70%] flex flex-row justify-center items-center">
+        <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
             <img src="{{hostUrl}}assets/frontent_files/img/services/web-developement-service-1.png" alt="" srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Working together on design and development</h2>
@@ -216,18 +214,18 @@
     </div>
 </section>
 
-<section class="w-full flex flex-col mt-[100px]">
+<section class="w-full flex flex-col mt-[50px]">
     <div class="w-full">
-        <h2 class="text-center text-[50px] font-bold  mb-5">
+        <h2 class="text-center text-[30px] md:text-[50px] font-bold  mb-5">
             Did you know?
         </h2>
-        <h2 class="text-center text-[30px] font-bold ">
+        <h2 class="text-center text-[20px] md:text-[25px] lg:text-[30px] font-bold ">
             Whether you’re considering a website upgrade or a full-blown overhaul,here are some statistics that might
             prove helpful in the process:
         </h2>
     </div>
-    <div class="flex flex-row justify-center items-start mt-5">
-        <div class="w-[20%] flex flex-col justify-center items-center gap-y-5">
+    <div class="flex flex-row flex-wrap justify-center items-start mt-5">
+        <div class="w-[45%] md:w-[20%] mb-3 flex flex-col justify-center items-center gap-y-5">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                     <path
@@ -249,7 +247,7 @@
                 87% of customers want a personalized shopping experience.
             </p>
         </div>
-        <div class="w-[20%] flex flex-col justify-center items-center gap-y-5">
+        <div class="w-[45%] md:w-[20%] mb-3 flex flex-col justify-center items-center gap-y-5">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="49" height="48" viewBox="0 0 49 48" fill="none">
                     <g clip-path="url(#clip0_14_2199)">
@@ -269,7 +267,7 @@
                 48% of people believe that a website’s design determines a business’s credibility.
             </p>
         </div>
-        <div class="w-[20%] flex flex-col justify-center items-center gap-y-5">
+        <div class="w-[45%] md:w-[20%] mb-3 flex flex-col justify-center items-center gap-y-5">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                     <path
@@ -288,7 +286,7 @@
                 75% of internet users prefer a mobile-friendly website.
             </p>
         </div>
-        <div class="w-[20%] flex flex-col justify-center items-center gap-y-5">
+        <div class="w-[45%] md:w-[20%] mb-3 flex flex-col justify-center items-center gap-y-5">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
                     <path
@@ -313,7 +311,7 @@
 
 <section class="w-full flex flex-col mt-[100px]">
     <div class="w-full">
-        <h2 class="text-center text-[50px] font-bold ">
+        <h2 class="text-center text-[30px] md:text-[50px] my-5 font-bold ">
             Industries We Serve
         </h2>
     </div>
@@ -321,13 +319,13 @@
 </section>
 
 <section class="w-full flex flex-col">
-    <div class="w-full mb-[100px]">
-        <h2 class="text-center text-[50px] font-bold ">
+    <div class="w-full mb-[50px]">
+        <h2 class="text-center text-[30px] md:text-[50px] my-5 font-bold ">
             Why Brands Choose Us For Contentful Development
         </h2>
     </div>
     <div class="w-full flex flex-col md:flex-row justify-center items-center  gap-5 gap-y-10">
-        <div class="w-full md:w-[50%] flex flex-col gap-5">
+        <div class="w-full md:w-[50%] flex flex-col ">
             <img src="{{hostUrl}}assets/frontent_files/img/services/contentful-development.png"/>
         </div>
         <div class="w-full md:w-[48%] flex flex-col">
@@ -347,23 +345,23 @@
 </section>
 
 <section class="w-full flex flex-row justify-center items-center mb-[100px] mt-[50px]">
-    <div class="w-[80%] flex flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
-        <div class="w-[30%] flex flex-col justify-around items-start gap-5">
+    <div class=" w-[95%] md:w-[80%] flex flex-col-reverse md:flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
+        <div class=" w-full md:w-[30%] flex flex-col justify-around items-start gap-5">
             <img  src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
-            <div class=" flex flex-row justify-center items-center gap-5">
+            <div class="w-full flex flex-row justify-center items-center gap-5">
                 <span>
                     <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png" alt="" srcset="">
                 </span>
                 <span>Phone: +91 9665891425</span>
             </div>
-            <div class=" flex flex-row justify-center items-center gap-5">
+            <div class="w-full flex flex-row justify-center items-center gap-5">
                 <span>
                     <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="" srcset="">
                 </span>
                 <span>Email: info@clumpssoftware.com</span>
             </div>
         </div>
-        <div class=" w-[48%] flex flex-col gap-5">
+        <div class="w-full md:w-[48%] flex flex-col gap-5">
             <div>
                 <h2 class="text-[30px] font-bold text-[#33B5CC] ">Get In Touch</h2>
             </div>
