--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -71,7 +71,7 @@ header .menu{
         position: fixed;
         top:100px;
         right: -100%;
-        background: rgba(0, 0, 0, 0.067);
+        background: rgb(130, 209, 231);
         height: calc(100vh - 100px);
         width:100%;
         flex-direction: column;
