--- a/src/app/pages/services/social-media/social-media.component.html
+++ b/src/app/pages/services/social-media/social-media.component.html
@@ -1,5 +1,5 @@
 <section class="w-full flex flex-col">
-    <div class="w-full flex flex-row flex-wrap justify-between mt-[150px]">
+    <div class="w-full flex flex-col-reverse md:flex-row flex-wrap justify-between mt-[150px]">
         <div class="w-full md:w-[48%] flex justify-end">
             <img class="h-auto" src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-1.png"
                 alt="homepage" data-aos="zoom-in" data-aos-duration="1000" />
@@ -195,44 +195,4 @@
     <img src="{{hostUrl}}assets/frontent_files/img/services/social-media/social-media-6.png" alt="" srcset="">
 </section>
 <!-- cotact us -->
-<section class="w-full flex flex-row justify-center items-center mb-[100px] mt-[50px]">
-    <div class="w-[80%] flex flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
-        <div class="w-[30%] flex flex-col justify-around items-start gap-5">
-            <img  src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
-            <div class=" flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png" alt="" srcset="">
-                </span>
-                <span>Phone: +91 9665891425</span>
-            </div>
-            <div class=" flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="" srcset="">
-                </span>
-                <span>Email: info@clumpssoftware.com</span>
-            </div>
-        </div>
-        <div class=" w-[48%] flex flex-col gap-5">
-            <div>
-                <h2 class="text-[30px] font-bold text-[#33B5CC] ">Get In Touch</h2>
-            </div>
-            <form>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="name">Name:</label>
-                    <input type="text" id="name" name="name" class="w-full p-2 border rounded-md" required>
-                </div>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="email">Email:</label>
-                    <input type="email" id="email" name="email" class="w-full p-2 border rounded-md" required>
-                </div>
-            
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="message">Message:</label>
-                    <textarea id="message" name="message" class="w-full p-2 border rounded-md resize-none" required></textarea>
-                </div>
-                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-md">Submit</button>
-            </form>
-        </div>
-
-    </div>
-</section>
+<app-contact></app-contact>
