--- a/src/app/pages/services/software-development/software-development.component.html
+++ b/src/app/pages/services/software-development/software-development.component.html
@@ -313,7 +313,7 @@
         <div class="w-full md:w-[40%] flex flex-col">
             <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-6.png" />
         </div>
-        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-2 p-5">
+        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-2 md:p-5">
             <div class="flex flex-row gap-5">
                 <div class="w-[20%] md:w-[15%]">
                     <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/icons/7187449-1.png"
@@ -417,8 +417,8 @@
         <div class="w-full md:w-[40%] flex flex-col">
             <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/s-d-img-8.png" />
         </div>
-        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-5 p-5">
-            <h2 class="text-[20px] text-black font-bold text-[#33B5CC]">
+        <div class="w-full md:w-[58%] flex flex-col justify-start items-start gap-5 mb-5 md:p-5">
+            <h2 class="text-[20px]  font-bold text-[#33B5CC]">
                 Our Programming Expertise
             </h2>
             <p>
@@ -447,7 +447,7 @@
 
 
     </div>
-    <div class="w-full flex justify-center items-center ">
+    <div class="w-full flex justify-center items-center mt-[20px]">
         <button type="button"
             class="px-5 py-2 border-4 border-[#33B5CC] rounded hover:bg-[#33B5CC] hover:text-white">Schedule A
             Meeting
@@ -455,13 +455,13 @@
     </div>
 </section>
 
-<section class="w-full flex flex-row gap-5 justify-center items-center">
+<section class="w-full flex flex-col md:flex-row gap-5 justify-center items-center">
     <div class="w-28%">
         <h2 class="font-bold text-[30px] text-[#33B5CC]">Find a developer for your project </h2>
     </div>
     
-    <div class="w-[70%] flex flex-row flex-wrap justify-center items-center">
-        <div class="w-[30%] flex-row flex-nowrap" *ngFor="let items of Technology">
+    <div class="w-full md:w-[70%] flex flex-row flex-wrap justify-center items-center">
+        <div class="w-[40%] md:w-[30%] flex-row flex-nowrap" *ngFor="let items of Technology">
             <span>
                 <img src="{{hostUrl}}assets/frontent_files/img/services/software-development/{{items.URL}}" alt="" srcset="">
             </span> 
@@ -478,44 +478,4 @@
     <img src="{{hostUrl}}assets/frontent_files/img/services/served-industry.png"/>
 </section>
 
-<section class="w-full flex flex-row justify-center items-center mb-[100px] mt-[50px]">
-    <div class="w-[80%] flex flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
-        <div class="w-[30%] flex flex-col justify-around items-start gap-5">
-            <img  src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
-            <div class=" flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png" alt="" srcset="">
-                </span>
-                <span>Phone: +91 9665891425</span>
-            </div>
-            <div class=" flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="" srcset="">
-                </span>
-                <span>Email: info@clumpssoftware.com</span>
-            </div>
-        </div>
-        <div class=" w-[48%] flex flex-col gap-5">
-            <div>
-                <h2 class="text-[30px] font-bold text-[#33B5CC] ">Get In Touch</h2>
-            </div>
-            <form>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="name">Name:</label>
-                    <input type="text" id="name" name="name" class="w-full p-2 border rounded-md" required>
-                </div>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="email">Email:</label>
-                    <input type="email" id="email" name="email" class="w-full p-2 border rounded-md" required>
-                </div>
-            
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="message">Message:</label>
-                    <textarea id="message" name="message" class="w-full p-2 border rounded-md resize-none" required></textarea>
-                </div>
-                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-md">Submit</button>
-            </form>
-        </div>
-
-    </div>
-</section>
+<app-contact></app-contact>
