--- a/src/app/pages/services/web-development/web-development.component.html
+++ b/src/app/pages/services/web-development/web-development.component.html
@@ -343,45 +343,4 @@
     </div>
     
 </section>
-
-<section class="w-full flex flex-row justify-center items-center mb-[100px] mt-[50px]">
-    <div class=" w-[95%] md:w-[80%] flex flex-col-reverse md:flex-row justify-around items-center border-[3px] border-[#33B5CC] rounded-md shadow-lg p-10">
-        <div class=" w-full md:w-[30%] flex flex-col justify-around items-start gap-5">
-            <img  src="{{hostUrl}}assets/frontent_files/img/services/contact-us.png" alt="" srcset="">
-            <div class="w-full flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-phone.png" alt="" srcset="">
-                </span>
-                <span>Phone: +91 9665891425</span>
-            </div>
-            <div class="w-full flex flex-row justify-center items-center gap-5">
-                <span>
-                    <img class="h-[25px]" src="{{hostUrl}}assets/frontent_files/img/services/contacu-us-mail.png" alt="" srcset="">
-                </span>
-                <span>Email: info@clumpssoftware.com</span>
-            </div>
-        </div>
-        <div class="w-full md:w-[48%] flex flex-col gap-5">
-            <div>
-                <h2 class="text-[30px] font-bold text-[#33B5CC] ">Get In Touch</h2>
-            </div>
-            <form>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="name">Name:</label>
-                    <input type="text" id="name" name="name" class="w-full p-2 border rounded-md" required>
-                </div>
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="email">Email:</label>
-                    <input type="email" id="email" name="email" class="w-full p-2 border rounded-md" required>
-                </div>
-            
-                <div class="mb-4">
-                    <label class="block font-semibold mb-1" for="message">Message:</label>
-                    <textarea id="message" name="message" class="w-full p-2 border rounded-md resize-none" required></textarea>
-                </div>
-                <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded-md">Submit</button>
-            </form>
-        </div>
-
-    </div>
-</section>
+<app-contact></app-contact>
