--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,7 +1,7 @@
-<header>
+<header class="absolute top-0 left-0">
     <input type="checkbox" name="" id="chk1">
     <div class="logo">
-        <a routerLink="home">
+        <a [routerLink]="['/home']" >
             <img src="{{hostUrl}}assets/frontent_files/img/clumpssoftware.png" alt=""/>
         </a>
         
