--- a/src/app/pages/services/app-development/app-development.component.html
+++ b/src/app/pages/services/app-development/app-development.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="w-full flex flex-col">
     <div class="w-full flex flex-col md:flex-row justify-between mt-[150px] gap-y-5">
         <div class="w-full md:w-[38%] flex flex-col justify-center items-start gap-5">
@@ -181,5 +182,4 @@
         </button>
     </div>
 </section>
-
 <app-contact></app-contact>
