--- a/src/app/pages/services/web-development/web-development.component.html
+++ b/src/app/pages/services/web-development/web-development.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="w-full flex flex-col">
     <div class="w-full flex flex-col md:flex-row justify-between mt-[150px] bg-[url('./assets/frontent_files/img/services/web-developement.png')] bg-left bg-no-repeat bg-cover md:bg-none">
         <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
