--- a/src/app/pages/services/software-development/software-development.component.html
+++ b/src/app/pages/services/software-development/software-development.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="w-full flex flex-col">
     <div class="w-full flex flex-row flex-wrap justify-between mt-[150px]">
         <div class="w-full md:w-[38%] flex flex-col justify-center items-start gap-5">
