--- a/src/app/products/layouts/header/header.component.css
+++ b/src/app/products/layouts/header/header.component.css
@@ -19,6 +19,7 @@ i{
 header .logo{
     flex: 1;
     color:black;
+     
     margin-left: 50px;
     /* text-transform: uppercase; */
     font-size: 15px;
@@ -70,7 +71,7 @@ header .menu{
         position: fixed;
         top:100px;
         right: -100%;
-        background: rgb(130, 209, 231);
+        background: rgba(0, 0, 0, 0.067);
         height: calc(100vh - 100px);
         width:100%;
         flex-direction: column;
