--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -1,55 +1,123 @@
 <app-header></app-header>
 <section class="w-full flex flex-col my-10 items-center px-5">
-    <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
-        <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
-            <h2 class="text-[45px] md:text-[60px] text-black font-bold">
-                Build Best websites for your Business
-            </h2>
-            <p class=" text-[#424040] md:text-[#6b6b84]">
-                Client-focused, customer-centric, creating website solutions that deliver tangible business results,
-                Clumps solutions 's web developers helps brands the ever-changing digital landscape.
-            </p>
-            <button type="button"
-                class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] bg-black text-[#fff] mt-5">Schedule
-                A Meeting</button>
-        </div>
-        <div class="w-full md:flex md:w-[58%]  justify-center">
-            <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-lg">
-                <h2 class="text-2xl font-semibold mb-4">Sign Up</h2>
-                <form>
-                  <div class="mb-4">
-                    <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
-                  </div>
-                  <div class="flex mb-4">
-                    <div class="w-1/2 mr-2">
-                      <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
-                      <input type="text" id="username" name="username" class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
-                    </div>
-                    <div class="w-1/2 ml-2">
-                      <label for="contact" class="block text-gray-700 font-medium mb-2">Contact Number</label>
-                      <input type="tel" id="contact" name="contact" class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
-                    </div>
-                  </div>
-                  <div class="mb-4">
-                    <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
-                    <input type="password" id="password" name="password" class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
-                  </div>
-                  <div class="mb-4">
-                    <label for="terms" class="flex items-center">
-                      <input type="checkbox" id="terms" name="terms" class="mr-2">
-                      <span class="text-gray-700">I agree to the <a href="#" class="text-blue-500">Terms of Service</a> and <a href="#" class="text-blue-500">Privacy Policy</a></span>
-                    </label>
-                  </div>
-                  <button type="submit" class="w-full py-2 px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-300">Sign Up</button>
-                </form>
-              </div>
-        </div>
+  <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
+    <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
+      <h2 class="text-[45px] md:text-[60px] text-black font-bold">
+        Build Best websites for your Business
+      </h2>
+      <p class=" text-[#424040] md:text-[#6b6b84]">
+        Client-focused, customer-centric, creating website solutions that deliver tangible business results,
+        Clumps solutions 's web developers helps brands the ever-changing digital landscape.
+      </p>
+      <button type="button"
+        class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] bg-black text-[#fff] mt-5">Schedule
+        A Meeting</button>
     </div>
+    <div class="w-full md:flex md:w-[58%]  justify-center">
+      <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4">Sign Up</h2>
+        <form>
+          <div class="mb-4">
+            <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
+            <input type="email" id="email" name="email"
+              class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
+          </div>
+          <div class="flex mb-4">
+            <div class="w-1/2 mr-2">
+              <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
+              <input type="text" id="username" name="username"
+                class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
+            </div>
+            <div class="w-1/2 ml-2">
+              <label for="contact" class="block text-gray-700 font-medium mb-2">Contact Number</label>
+              <input type="tel" id="contact" name="contact"
+                class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
+            </div>
+          </div>
+          <div class="mb-4">
+            <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
+            <input type="password" id="password" name="password"
+              class="w-full px-4 py-2 border rounded-lg focus:ring-blue-500 focus:border-blue-500">
+          </div>
+          <div class="mb-4">
+            <label for="terms" class="flex items-center">
+              <input type="checkbox" id="terms" name="terms" class="mr-2">
+              <span class="text-gray-700">I agree to the <a href="#" class="text-blue-500">Terms of Service</a> and <a
+                  href="#" class="text-blue-500">Privacy Policy</a></span>
+            </label>
+          </div>
+          <button type="submit"
+            class="w-full py-2 px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-300">Sign
+            Up</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
-<section>
 
+<section class="w-full flex flex-col justify-center items-center bg-[#000] py-[15px] px-[10px] gap-y-5">
+  <div class="w-full">
+    <p class="text-[50px] text-center font-bold text-[#fff]">
+      Build excellent customer relationships .
+    </p>
+  </div>
+  <div class="w-[60%]">
+    <p class="text-[18px] text-center font-bold text-[#00b7ff]">
+      Engage with your customers through the right channel at the right time and with the right message. With Clumps CRM Plus you can harness the power of omni-channel presence, segmentation, KPIs, predictive intelligence, and more to deliver personalized experiences that breed customer loyalty.
+    </p>
+    <p class="text-[14px] text-center font-bold text-[#FFD01E]">
+      How Clumps CRM Plus Can Help You Build Better Relations.
+    </p>
+  </div>
+  <div
+    class="w-full bg-auto bg-no-repeat bg-left-bottom relative flex justify-center items-center bg-[url('http://localhost:4200/assets/frontent_files/img/product/crm-plus/crm-plus.png')]">
+    <div class="w-[80%] flex flex-row justify-end items-end px-[20px]">
+      <img src="http://localhost:4200/assets/frontent_files/img/product/crm-plus/home-screen.png" alt="phone dispaly" />
+    </div>
+    <div class="absolute top-[40%] left-[30%]">
+      <svg xmlns="http://www.w3.org/2000/svg" width="330" height="148" viewBox="0 0 330 148" fill="none">
+        <path
+          d="M305.544 2.53297C245.087 10.572 151.411 41.8438 98.9845 71.3471C81.8237 80.9939 65.765 91.4447 54.1145 100.609C44.9831 107.764 44.9831 107.764 44.9831 104.789C44.9831 103.182 45.6129 101.815 46.4001 101.815C47.3447 101.815 48.4468 100.127 48.9191 97.9563C50.4935 92.0878 54.9017 85.0938 60.0972 79.9489C62.7736 77.296 62.9311 74.1608 60.4121 73.1157C59.31 72.6333 56.4761 72.0706 54.272 71.8294C50.0211 71.2667 46.8724 72.553 41.5195 76.9744C37.5835 80.1096 22.312 100.448 16.9591 109.452C12.0785 117.411 0.900391 140.161 0.900391 141.849C0.900391 142.332 2.47477 143.618 4.52147 144.663C7.19792 146.11 10.3467 146.673 17.5889 147.075L27.35 147.557L39.7877 141.769C52.855 135.579 68.5989 129.067 102.448 115.723C113.784 111.301 127.481 105.513 133.149 102.94C138.816 100.368 145.901 97.2328 148.892 96.1073L154.403 93.9368L151.254 92.1682C147.79 90.1584 139.604 88.1487 135.195 88.1487C133.621 88.1487 122.6 91.2035 110.792 94.9015C98.827 98.6798 89.0658 101.493 89.0658 101.252C89.0658 100.931 91.8997 98.8406 95.3634 96.5093C103.235 91.2035 103.55 89.8369 95.9931 94.178L90.3253 97.3936L95.3634 93.9368C98.1973 92.0074 100.874 90.7212 101.346 90.9623C102.448 91.5251 107.958 88.9526 107.958 87.9075C107.958 87.4252 106.384 87.7467 104.495 88.631L100.874 90.1584L103.865 88.3095C105.597 87.3448 107.329 86.7017 107.644 86.9428C108.746 87.5056 115.83 84.1292 115.83 83.0841C115.83 82.6017 114.256 82.9233 112.367 83.8076L108.746 85.335L111.737 83.5664C113.311 82.5214 115.201 81.9586 115.83 82.1194C116.618 82.3606 122.285 79.5469 128.583 75.9293C153.93 61.6199 200.217 42.4066 243.513 28.2579C255.163 24.4795 279.251 17.6464 297.199 13.1445C315.147 8.64264 329.789 4.54274 329.789 3.98001C329.946 2.93494 323.964 0.523224 321.287 0.523224C320.5 0.603607 313.415 1.4879 305.544 2.53297ZM155.19 49.4005C112.524 68.0511 75.9985 89.4349 52.6976 109.211C48.4468 112.829 44.9831 115.401 44.9831 114.919C44.9831 113.874 60.4121 101.333 71.4328 93.4544C90.7977 79.7077 123.23 62.0218 149.68 50.8476C164.006 44.8183 168.257 43.6928 155.19 49.4005ZM87.4915 100.529C87.4915 100.69 86.232 101.333 84.815 101.895C82.296 102.94 82.1386 102.86 84.1853 101.574C86.232 100.288 87.4915 99.8857 87.4915 100.529Z"
+          fill="black" />
+      </svg>
+    </div>
+  </div>
+</section>
+
+<section class="w-full flex flex-col justify-center items-center bg-[#F4F0EA] py-[15px] px-[10px] gap-y-5">
+  <div class="w-full">
+    <p class="text-[50px] text-center font-bold text-[#000]">
+      Maximum productivity with minimum use .
+    </p>
+  </div>
+  <div class="w-[60%]">
+    <p class="text-[18px] text-center font-bold text-[#00b7ff]">
+      Let's break the myth that CRMs are all about data entry. Clumps CRM plus is built to get more done in less.
+      Automate your workflows, processes, campaigns, customer journeys, and more so that you can focus less on software
+      and more on relationships.
+    </p>
+    <p class="text-[14px] text-center font-bold text-[#000]">
+      How to get more done with less time with Clumps CRM Plus >
+    </p>
+  </div>
+  <div
+    class="w-full bg-auto bg-no-repeat bg-left-bottom relative flex justify-center items-center bg-[url('http://localhost:4200/assets/frontent_files/img/product/crm-plus/crm-plus.png')]">
+    <div class="w-[80%] flex flex-row justify-end items-end px-[20px]">
+      <img src="http://localhost:4200/assets/frontent_files/img/product/crm-plus/home-screen.png" alt="phone dispaly" />
+    </div>
+    <div class="absolute top-[40%] left-[30%]">
+      <svg xmlns="http://www.w3.org/2000/svg" width="330" height="148" viewBox="0 0 330 148" fill="none">
+        <path
+          d="M305.544 2.53297C245.087 10.572 151.411 41.8438 98.9845 71.3471C81.8237 80.9939 65.765 91.4447 54.1145 100.609C44.9831 107.764 44.9831 107.764 44.9831 104.789C44.9831 103.182 45.6129 101.815 46.4001 101.815C47.3447 101.815 48.4468 100.127 48.9191 97.9563C50.4935 92.0878 54.9017 85.0938 60.0972 79.9489C62.7736 77.296 62.9311 74.1608 60.4121 73.1157C59.31 72.6333 56.4761 72.0706 54.272 71.8294C50.0211 71.2667 46.8724 72.553 41.5195 76.9744C37.5835 80.1096 22.312 100.448 16.9591 109.452C12.0785 117.411 0.900391 140.161 0.900391 141.849C0.900391 142.332 2.47477 143.618 4.52147 144.663C7.19792 146.11 10.3467 146.673 17.5889 147.075L27.35 147.557L39.7877 141.769C52.855 135.579 68.5989 129.067 102.448 115.723C113.784 111.301 127.481 105.513 133.149 102.94C138.816 100.368 145.901 97.2328 148.892 96.1073L154.403 93.9368L151.254 92.1682C147.79 90.1584 139.604 88.1487 135.195 88.1487C133.621 88.1487 122.6 91.2035 110.792 94.9015C98.827 98.6798 89.0658 101.493 89.0658 101.252C89.0658 100.931 91.8997 98.8406 95.3634 96.5093C103.235 91.2035 103.55 89.8369 95.9931 94.178L90.3253 97.3936L95.3634 93.9368C98.1973 92.0074 100.874 90.7212 101.346 90.9623C102.448 91.5251 107.958 88.9526 107.958 87.9075C107.958 87.4252 106.384 87.7467 104.495 88.631L100.874 90.1584L103.865 88.3095C105.597 87.3448 107.329 86.7017 107.644 86.9428C108.746 87.5056 115.83 84.1292 115.83 83.0841C115.83 82.6017 114.256 82.9233 112.367 83.8076L108.746 85.335L111.737 83.5664C113.311 82.5214 115.201 81.9586 115.83 82.1194C116.618 82.3606 122.285 79.5469 128.583 75.9293C153.93 61.6199 200.217 42.4066 243.513 28.2579C255.163 24.4795 279.251 17.6464 297.199 13.1445C315.147 8.64264 329.789 4.54274 329.789 3.98001C329.946 2.93494 323.964 0.523224 321.287 0.523224C320.5 0.603607 313.415 1.4879 305.544 2.53297ZM155.19 49.4005C112.524 68.0511 75.9985 89.4349 52.6976 109.211C48.4468 112.829 44.9831 115.401 44.9831 114.919C44.9831 113.874 60.4121 101.333 71.4328 93.4544C90.7977 79.7077 123.23 62.0218 149.68 50.8476C164.006 44.8183 168.257 43.6928 155.19 49.4005ZM87.4915 100.529C87.4915 100.69 86.232 101.333 84.815 101.895C82.296 102.94 82.1386 102.86 84.1853 101.574C86.232 100.288 87.4915 99.8857 87.4915 100.529Z"
+          fill="black" />
+      </svg>
+    </div>
+  </div>
+</section>
+
+<section>
+  <app-contact-us></app-contact-us>
 </section>
 <section>
-  
+  <app-footer></app-footer>
 </section>
