--- a/src/app/products/layouts/contact-us/contact-us.component.html
+++ b/src/app/products/layouts/contact-us/contact-us.component.html
@@ -3,29 +3,33 @@
         <p>Get Notified when we launch .</p>
     </div>
     <div class="w-full">
-        <div class="bg-cover bg-center text-white text-center py-16">
-            <form class="w-1/2 mx-auto">
+        <div class="bg-[url('http://localhost:4200/assets/frontent_files/img/product/contact-us.png')] bg-auto bg-no-repeat	 text-white text-center py-16 w-full flex justify-end items-end">
+            <form class="w-1/2 ">
                 <div class="flex mb-4">
                     <div class="w-1/2 mr-2">
-                        <input class="w-full px-4 py-2 rounded custom-input" type="text" placeholder="First Name">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">First Name</p>
+                        <input class="w-full px-4 py-2 rounded custom-input" type="text" placeholder="">
                         <div class="mt-1 border-t"></div>
                     </div>
                     <div class="w-1/2 ml-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Last Name</p>
                         <input class="w-full px-4 py-2 rounded custom-input" type="text" placeholder="Last Name">
                         <div class="mt-1 border-t"></div>
                     </div>
                 </div>
                 <div class="flex mb-4">
                     <div class="w-1/2 mr-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Email</p>
                         <input class="w-full px-4 py-2 rounded custom-input" type="email" placeholder="Email">
                         <div class="mt-1 border-t"></div>
                     </div>
                     <div class="w-1/2 ml-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Phone Number</p>
                         <input class="w-full px-4 py-2 rounded custom-input" type="tel" placeholder="Phone Number">
                         <div class="mt-1 border-t"></div>
                     </div>
                 </div>
-                <div class="flex mb-4">
+                <div class="flex mb-4 ml-2">
                     <label class="flex items-center mr-4 text-black font-bold">
                         <input type="radio" name="contactMethod" value="whatsapp" class="mr-2">
                         WhatsApp
@@ -39,6 +43,7 @@
                         Call
                     </label>
                 </div>
+                <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Message</p>
                 <textarea class="w-full px-4 py-2 rounded custom-input"
                     placeholder="How would you like to connect?"></textarea>
                 <div class="mt-4 border-t"></div>
