product page one work

--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -72,11 +72,31 @@
     </p>
   </div>
   <div class="w-full h-[100vh] relative flex flex-col justify-center items-end ">
-    <div class=" absolute right-[20%] top-[20%] flex justify-center items-center">
+    <div class=" absolute right-[32%] top-[10%] flex justify-center items-center">
       <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/dashboard-2.png" alt="">
     </div>
-    <div class="absolute bottom-[20%] left-[20%] flex justify-center items-center">
+    <div class="absolute bottom-[10%] left-[25%] flex justify-center items-center">
       <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Dashboard.png" alt="">
+    </div>
+    <div class="absolute top-[10%] left-[15%] flex flex-col">
+      <p class="font-bold text-[14px] text-[#fff]">Contact Management</p>
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Contact-Management.png" alt="">
+    </div>
+    <div class="absolute top-[10%] right-[12%] z-10 flex flex-row items-end">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Centralize-Customer-Data.png" alt="">
+      <p class="font-bold text-[14px] text-[#fff]">Centralize Customer Data</p>
+    </div>
+    <div class="absolute top-[35%] right-[12%] z-10 flex flex-row items-start">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Automated-Workflows.png" alt="">
+      <p class="font-bold text-[14px] text-[#fff]">Automated Workflows</p>
+    </div>
+    <div class="absolute top-[60%] right-[15%] z-10 flex flex-row items-end">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Reporting-and-Analytics.png" alt="">
+      <p class="font-bold text-[14px] text-[#fff]">Reporting and Analytics</p>
+    </div>
+    <div class="absolute top-[60%] left-[10%] z-10 flex flex-col justify-start items-start">
+      <img src="{{hostUrl}}assets/frontent_files/img/product/crm-plus/Sales-Pipeline-Management.png" alt="">
+      <p class="font-bold text-[14px] text-[#fff]">Sales Pipeline Management</p>
     </div>
   </div>
 </section>
