product page one work all

--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -1,21 +1,18 @@
 <app-header></app-header>
-<section class="w-full flex flex-col my-10 items-center px-5">
+<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
   <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
     <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
       <h2 class="text-[45px] md:text-[60px] text-black font-bold">
-        Build Best websites for your Business
+        Strengthen Customer Relationships and Drive Sales.
       </h2>
       <p class=" text-[#424040] md:text-[#6b6b84]">
-        Client-focused, customer-centric, creating website solutions that deliver tangible business results,
-        Clumps solutions 's web developers helps brands the ever-changing digital landscape.
+        Clumps CRM is a powerful customer relationship management software that helps businesses build strong connections with their customers. From lead generation to customer retention, our CRM solution streamlines sales processes, improves customer service, and provides valuable analytics for strategic decision-making. Maximize sales opportunities, nurture customer loyalty, and elevate your business to new heights.
       </p>
-      <button type="button"
-        class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px] bg-black text-[#fff] mt-5">Schedule
-        A Meeting</button>
+      
     </div>
     <div class="w-full md:flex md:w-[58%]  justify-center">
       <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-lg">
-        <h2 class="text-2xl font-semibold mb-4">Sign Up</h2>
+        <h2 class="text-[16px] text-[#F0483E] text-center font-semibold mb-4">Get Started With Your Free Trial</h2>
         <form>
           <div class="mb-4">
             <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
@@ -47,8 +44,7 @@
             </label>
           </div>
           <button type="submit"
-            class="w-full py-2 px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-300">Sign
-            Up</button>
+            class="w-full py-2 px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-300">GET  STARTED</button>
         </form>
       </div>
     </div>
