--- a/src/app/products/layouts/contact-us/contact-us.component.html
+++ b/src/app/products/layouts/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <section class="w-full flex flex-col justify-center items-center">
-    <div class="w-[80%]">
-        <p>Get Notified when we launch .</p>
+    <div class="w-[80%] text-center">
+        <p class="font-bold text-[50px]">Get Notified when we launch .</p>
     </div>
     <div class="w-full">
         <div class="bg-[url('http://localhost:4200/assets/frontent_files/img/product/contact-us.png')] bg-auto bg-no-repeat	 text-white text-center py-16 w-full flex justify-end items-end">
