--- a/src/app/pages/services/social-media/social-media.component.html
+++ b/src/app/pages/services/social-media/social-media.component.html
@@ -197,3 +197,7 @@
 </section>
 <!-- cotact us -->
 <app-contact></app-contact>
+<!-- footer -->
+<section>
+    <app-footer></app-footer>
+</section>
