--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -1,90 +1,24 @@
-header{
-    width:100%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    z-index: 99;
-    box-shadow: 0 0 10px #abaaaa8f;
-    background: rgb(255, 255, 255);
-}
-#chk1{
-    display: none;
-}
-i{
-    color: black;
+.cool-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
     cursor: pointer;
-}
-header .logo{
-    flex: 1;
-    color:black;
-    margin-left: 50px;
-    /* text-transform: uppercase; */
-    font-size: 15px;
 }
 
- 
-.search-box button{
-    cursor: pointer;
-    width:40px;
-    height: 40px;
-    border-radius: 30px;
-    border:none;
-    position: absolute;
-    top:0;
-    right: 0;
-    transform: scale(0.9);
-    background: green;
-    color: #fff;
+.cool-link:hover {
+    color: #47d5f1e2;
 }
-header ul {
-    flex:3;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+
+.cool-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #47d5f1e2;
+    transition: width .3s;
 }
-header ul li{
-    list-style: none;
-}
-header ul li a{
-    text-decoration: none;
-    color:#000;
-    font-weight: 600;
-    /* text-transform: uppercase; */
-    padding: 10px 15px;
-}
-header ul li a:hover{
-    border-bottom: 2px solid cadetblue;
-}
-header .menu{
-    font-size: 2em;
-    margin-top:20px;
-    display: none;
-}
-@media(max-width:1000px){
-    .search-box button{
-        position: absolute;
-    }
-    header ul{
-        position: fixed;
-        top:100px;
-        right: -100%;
-        background: rgb(130, 209, 231);
-        height: calc(100vh - 100px);
-        width:100%;
-        flex-direction: column;
-        align-items: center;
-        transition: right 0.5s linear;
-    }
-     
-    header .menu{
-        display: block;
-        width:100px;
-        text-align: center;
-    }
-    #chk1:checked ~ ul{
-        right: 0;
-    }
-  
+
+.cool-link:hover::after {
+    width: 100%;
+    /* transition: width .3s; */
 }
